// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/EnumMetadataField should correctly render an enum field 1`] = `
<div
  className="bdl-EnumMetadataField"
>
  <Label>
    <SingleSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "displayText": undefined,
            "isSelectable": false,
            "value": undefined,
          },
          Object {
            "displayText": "foo",
            "isSelectable": true,
            "value": "foo",
          },
          Object {
            "displayText": "bar",
            "isSelectable": true,
            "value": "bar",
          },
          Object {
            "displayText": "baz",
            "isSelectable": true,
            "value": "baz",
          },
        ]
      }
      selectedValue="value"
    />
  </Label>
</div>
`;

exports[`features/metadata-instance-editor/fields/EnumMetadataField should correctly render an enum field with description 1`] = `
<div
  className="bdl-EnumMetadataField"
>
  <Label>
    <i
      className="bdl-EnumMetadataField-desc"
    >
      description
    </i>
    <SingleSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "displayText": undefined,
            "isSelectable": false,
            "value": undefined,
          },
          Object {
            "displayText": "foo",
            "isSelectable": true,
            "value": "foo",
          },
          Object {
            "displayText": "bar",
            "isSelectable": true,
            "value": "bar",
          },
          Object {
            "displayText": "baz",
            "isSelectable": true,
            "value": "baz",
          },
        ]
      }
      selectedValue="value"
    />
  </Label>
</div>
`;
